<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ready Badger</string>
    <string name="dateof">Date of Occurrence</string>
    <string name="type">Type of Occurrence</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip Code</string>
    <string name="phone">Daytime Contact Phone</string>
    <string name="rento">Own or Rent</string>
    <string name="loss">Estimate of Damage Loss</string>
    <string name="percent">Percent of Loss Covered by Your Insurance</string>
    <string name="habitable">Is Residence Habitable?</string>
    <string name="water">Is There Water in Basement?</string>
    <string name="yeswater">If Yes, How Much in Inches</string>
    <string name="family">Does a Family Member Permanently Live and Sleep in the Basement?</string>
    <string name="description">Describe the Property Damage</string>
    <string name="flood">Flood</string>
    <string name="svr">Severe Storm</string>
    <string name="sewer">Sewer Backup</string>
    <string name="other">Other</string>
    <string name="own">Own</string>
    <string name="rent">Rent</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="photoButton">Damage Photos</string>
    <string name="submit">Submit Report</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_checklist">Checklist</string>
    <string name="title_activity_checklist__item_list_view">CheckList Items</string>
    <string name="title_activity_checklist__item__create">Create Item</string>
    <string name="title_activity_checklist__item__detail">Item Detail</string>
    <string name="title_activity_checklist__kit__create">Create A Kit</string>
    <string name="activity_checklist_item_create_name_textview">Name:</string>
    <string name="activity_checklist_item_create_qty_textview">QTY:</string>
    <string name="activity_checklist_item_create_priority_textview">Priority:</string>
    <string name="activity_checklist_item_create_description_textview">Description</string>
    <string name="activity_checklist_item_create_cancel_button">Cancel</string>
    <string name="activity_checklist_item_create_save_button">Save</string>
    <string name="activity_checklist_item_detail_name_textview">Name:</string>
    <string name="activity_checklist_item_detail_qty_textview">QTY:</string>
    <string name="activity_checklist_item_detail_priority_textview">Priority:</string>
    <string name="activity_checklist_item_detail_description_textview">Description</string>
    <string name="activity_checklist_item_detail_cancel_button">Cancel</string>
    <string name="activity_checklist_item_detail_update_button">Update</string>
    <string name="activity_checklist_create_title_textview">Title:</string>
    <string name="activity_checklist_create_items_textview">Items:</string>
    <string name="activity_checklist_create_add_button">+</string>
    <string name="activity_checklist_create_cancel_button">Cancel</string>
    <string name="activity_checklist_create_save_button">Save</string>
    <string name="checklist_item_listview_row_textview">Empty</string>
    <string name="activity_checklist_row_textview">Empty</string>
    <string name="activity_checklist_create_row_textview">Empty</string>
    <string name="title_activity_checklist__create__item__add">Checklist_Create_Item_Add</string>
    <string name="menu_checklist_edit">Edit Mode</string>
    <string name="title_activity_rss">Alerts and Warnings</string>
    <string name="title_activity_county_picker">CountyPicker</string>
    <string name="hello_world">Hello world!</string>
    <string name="supplyType">Supply Type</string>
    <string name="DisasterPlan">Disaster Plan</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="RuInsured">Your Insurance Deductible</string>
    <string name="title_activity_poop">Poop</string>
    <string name="title_activity_sanitation_supp">SanitationSupp</string>
    <string name="title_activity_essentials">Essentials</string>
    <string name="title_activity_water">Water</string>
    <string name="title_activity_food">Food</string>
    <string name="title_activity_first_aid">FirstAid</string>
    <string name="title_activity_bedding">Bedding</string>
    <string name="title_activity_prep_web_view">Be Prepared</string>
    <string name="title_activity_info_display">InfoDisplay</string>
    <string name="change_county">Change County</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addpic">Add Picture</string>
    <string name="primary">Primary</string>
    <string name="additional">Additional</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="current_prim">Current Primary County: </string>
    <string name="clear_primary">Clear Primary</string>

</resources>
