<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".DamageReports">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/type"
                android:id="@+id/occuranceLabel"
                android:layout_weight="1" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flood"
                    android:id="@+id/floodBox"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/svr"
                    android:id="@+id/severeBox"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fire"
                    android:id="@+id/fireButton" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sewer"
                    android:id="@+id/sewerBox"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:id="@+id/otherBox"
                    android:checked="false" />

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateof"
                android:id="@+id/dateLabel" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/dateEdit"
                android:inputType="none" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/name"
                android:id="@+id/nameLabel"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textPersonName"
                android:hint="John Doe"
                android:ems="10"
                android:id="@+id/nameEdit"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/address"
                android:id="@+id/addressLabel"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textPostalAddress"
                android:hint="1234 South Road"
                android:ems="10"
                android:id="@+id/addressEdit"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/city"
                android:id="@+id/cityLabel"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="Milwaukee"
                android:id="@+id/cityEdit"
                android:layout_weight="1"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/state"
                android:id="@+id/stateLabel"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="WI"
                android:id="@+id/stateEdit"
                android:layout_weight="1"
                android:inputType="none"
                android:editable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/zip"
                android:id="@+id/zipLabel"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="12345"
                android:ems="10"
                android:id="@+id/zipEdit"
                android:layout_weight="1"
                android:autoText="false"
                android:numeric="integer"
                android:inputType="number" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/rento"
                android:id="@+id/rentLabel"
                android:layout_weight="1" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/own"
                    android:id="@+id/ownBox"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rent"
                    android:id="@+id/rentBox"
                    android:checked="false" />

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/RuInsured"
                android:id="@+id/insuranceDeduct"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/insurDeductAmt"
                android:hint="Enter 0.00 if not Insured"
                android:editable="false"
                android:numeric="decimal"
                android:inputType="numberDecimal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/loss"
                android:id="@+id/lossLabel"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number|numberDecimal"
                android:hint="14000.43"
                android:ems="10"
                android:id="@+id/lossEdit"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/percent"
                android:id="@+id/percentLabel"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="45"
                android:ems="10"
                android:id="@+id/percentEdit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habitable"
                android:id="@+id/habitLabel" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/habitBoxYes"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/habitBoxNo"
                    android:checked="false" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water"
                android:id="@+id/waterLabel" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/waterBoxYes"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/waterBoxNo"
                    android:checked="false" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yeswater"
                android:id="@+id/yesWaterLabel" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="14"
                android:ems="10"
                android:id="@+id/yesWaterEdit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family"
                android:id="@+id/familyLabel" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/familyBoxYes"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/familyBoxNo"
                    android:checked="false" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:id="@+id/damageLabel" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="Water in basement, tree fell through the roof, etc."
                android:ems="10"
                android:id="@+id/damageEdit" />

            <include layout="@layout/damage_pictures" />

            <Button
                android:id="@+id/submitbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
